# FreeCAD_SheetMetal

./: .gitattributes  .gitignore  BaseShapeOptions.ui  ExtrudedCutout.py  Init.py  InitGui.py  README.md  SMprefs.ui  SheetMetalBaseBend.py  SheetMetalBaseCmd.py  SheetMetalBaseShape.py  SheetMetalBaseShapeCmd.py  SheetMetalBend.py  SheetMetalBendSolid.py  SheetMetalBendWall.py  SheetMetalBendWallCmd.py  SheetMetalCmd.py  SheetMetalCornerRelief.py  SheetMetalCornerReliefCmd.py  SheetMetalExtend.py  SheetMetalExtendCmd.py  SheetMetalExtraToolbar.py  SheetMetalFoldCmd.py  SheetMetalFoldWall.py  SheetMetalForming.py  SheetMetalFormingCmd.py  SheetMetalFromSolid.py  SheetMetalHem.py  SheetMetalJunction.py  SheetMetalJunctionCmd.py  SheetMetalJunctionObj.py  SheetMetalKfactor.py  SheetMetalLogger.py  SheetMetalNewUnfolder.py  SheetMetalRelief.py  SheetMetalReliefCmd.py  SheetMetalReliefObj.py  SheetMetalSketch.py  SheetMetalSolidBend.py  SheetMetalSolidBendCmd.py  (+17 more)
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: scorecard.yml
Macros/: SheetMetalUnfoldUpdater.FCMacro
Resources/: SheetMetal.qrc
SMTests/: testFolder.py  testKfactor.py
tools/: README.md  air-bending-notes.md  calc-unfold.py
translations/: SheetMetal.ts  SheetMetal_de.qm  SheetMetal_de.ts  SheetMetal_el.qm  SheetMetal_el.ts  SheetMetal_es-ar.qm  SheetMetal_es-ar.ts  SheetMetal_es-es.qm  SheetMetal_es-es.ts  SheetMetal_it.qm  SheetMetal_pl.qm  SheetMetal_pl.ts  SheetMetal_pt-br.ts  SheetMetal_pt-pt.ts  compile_qm.py  create_ts.py  update.sh  update_translation.sh
(+67 files in other folders)
